--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <a href="#contact-us">Contact Us</a>
         </div>
         <a class="shop" href="produk.html">Shop</a>
-        <a class="chat" href="https://wa.me/628123456?text=Saya ingin bertanya" target="_blank">Chat</a>
+        <a class="chat" href="https://wa.me/628123456?text=Saya ingin bertanya" target="_blank">
+            <i class="bi bi-whatsapp"></i> Chat</a>
     </nav>
 
     <!--Tulis kode header mulai di baris 28-->
@@ -30,146 +31,147 @@
             <h1>Kopi Kuy <img src="images/icon/icon_kopi.svg" alt="">
             </h1>
             <img src="images/header/header3.png" alt="">
+            <p>Kopi Kuy merupakan sebuah startup kopi retail yang ingin menyajikan high quality coffee untuk para
+                pelanggannya
+            </p>
+            <div class="container">
+                <p>Dapat dibeli melalui</p>
+
+                <div class="olshop">
+                    <img src="images/logo/logo_bukalapak.png" alt="">
+                    <img src="images/logo/logo_shopee.png" alt="">
+                    <img src="images/logo/logo_tokopedia.png" alt="">
+                </div>
+            </div>
         </div>
         <div class="kanan">
             <img src="images/header/header1.png" alt="">
         </div>
     </header>
-    <p>Kopi Kuy merupakan sebuah startup kopi retail yang ingin menyajikan high quality coffee untuk para pelanggannya
-    </p>
-    <div class="container">
-        <p>Dapat dibeli melalui</p>
 
-        <div class="olshop">
-            <img src="images/logo/logo_bukalapak.png" alt="">
-            <img src="images/logo/logo_shopee.png" alt="">
-            <img src="images/logo/logo_tokopedia.png" alt="">
-        </div>
-    </div>
     </header>
-    <header>
-        <section class="best-seller" id="best-seller">
-            <h2>Menu Andalan Kami</h2>
-            <p>Nikmati menu andalan yang menjadi menu favorit kami</p>
-            <div class="produk">
-                <img src="images/produk/product_capuchino.jpg" alt="">
-                <p>Capuchinno</p>
-            </div>
-            <div class="produk">
-                <img src="images/produk/product_espresso.jpg" alt="">
-                <p>Espresso</p>
-            </div>
-            <div class="produk">
-                <img src="images/produk/product_kopi_susu.jpg" alt="">
-                <p>Kopi Susu</p>
-            </div>
-            <div class="produk">
-                <img src="images/produk/product_latte.jpg" alt="">
-                <p>Latte</p>
-            </div>
+    <section class="best-seller" id="best-seller">
+        <h2>Menu Andalan Kami</h2>
+        <p>Nikmati menu andalan yang menjadi menu favorit kami</p>
+        <div class="produk">
+            <img src="images/produk/product_capuchino.jpg" alt="">
+            <p>Capuchinno</p>
+        </div>
+        <div class="produk">
+            <img src="images/produk/product_espresso.jpg" alt="">
+            <p>Espresso</p>
+        </div>
+        <div class="produk">
+            <img src="images/produk/product_kopi_susu.jpg" alt="">
+            <p>Kopi Susu</p>
+        </div>
+        <div class="produk">
+            <img src="images/produk/product_latte.jpg" alt="">
+            <p>Latte</p>
+        </div>
 
-        </section>
-        <section class="about-us" id="about-us">
-            <h2>Gak Ngopi Gak Kuy!</h2>
-            <p>Didirikan padda 2017, Kopi Kuy adalah sebuah startup kopi retail yang ingin meenyajikan kopi dengan
-                kualitas
-                tinggi untuk para pelanggannya. Nama Kuy yang diambil dari "yuk" yang merupakan harapan kami untuk
-                mengajak
-                semua yang terlibat dalam bisnis kami untuk bersama-sama menikmati sajian kopi yang berkualitas.</p>
-            <img src="images/about-us/barista.jpg" alt="">
-            <p>Kopi dari petani terpilih, dan berkulitas tinggi diproses secara sempurna dan diteruskan oleh para
-                barista
-                handal, yang penu semangat dalam menyiapkan segelas kebahagiaan spesial untukmu.</p>
-        </section>
-        <section class="our-team" id="our-team">
-            <h2>Our Team</h2>
-            <P>Kami berinvesrasi dalam rasa - mulai dari pemilihan biji, metode pemanggangan, hingga barista
-                bersertifikasi internasional.</P>
-            <div class="team">
-                <img src="images/team/team1.jpg" alt="">
-                <h3>Riki Steven</h3>
-                <p>Founder Kopi Kuy</p>
+    </section>
+    <section class="about-us" id="about-us">
+        <h2>Gak Ngopi Gak Kuy!</h2>
+        <p>Didirikan padda 2017, Kopi Kuy adalah sebuah startup kopi retail yang ingin meenyajikan kopi dengan
+            kualitas
+            tinggi untuk para pelanggannya. Nama Kuy yang diambil dari "yuk" yang merupakan harapan kami untuk
+            mengajak
+            semua yang terlibat dalam bisnis kami untuk bersama-sama menikmati sajian kopi yang berkualitas.</p>
+        <img src="images/about-us/barista.jpg" alt="">
+        <p>Kopi dari petani terpilih, dan berkulitas tinggi diproses secara sempurna dan diteruskan oleh para
+            barista
+            handal, yang penu semangat dalam menyiapkan segelas kebahagiaan spesial untukmu.</p>
+    </section>
+    <section class="our-team" id="our-team">
+        <h2>Our Team</h2>
+        <P>Kami berinvesrasi dalam rasa - mulai dari pemilihan biji, metode pemanggangan, hingga barista
+            bersertifikasi internasional.</P>
+        <div class="team">
+            <img src="images/team/team1.jpg" alt="">
+            <h3>Riki Steven</h3>
+            <p>Founder Kopi Kuy</p>
+        </div>
+        <div class="team">
+            <img src="images/team/team2.jpg" alt="">
+            <h3>Andi Asraf</h3>
+            <p>Head of Marketing</p>
+        </div>
+        <div class="team">
+            <img src="images/team/team3.jpg" alt="">
+            <h3>Anfelina Felly</h3>
+            <p>Barista</p>
+        </div>
+        <div class="team">
+            <img src="images/team/team4.jpg" alt="">
+            <h3>Sarah Chou</h3>
+            <p>Barista</p>
+        </div>
+    </section>
+    <section class="review" id="review">
+        <h2>Apa Kata Mereka</h2>
+        <p>Kami berikan fakta dan data, karena kepuasan konsumen selalu nomor 1 untuk kami</p>
+        <div class="testimoni">
+            <img src="images/customer/customer1.jpg" alt="">
+            <div class="profile">
+                <h3>Benni Oktavian</h3>
+                <p>Mahasiswa</p>
             </div>
-            <div class="team">
-                <img src="images/team/team2.jpg" alt="">
-                <h3>Andi Asraf</h3>
-                <p>Head of Marketing</p>
+            <p>"Perdana kesini langsung merasa cocok dari segi tempat dan rasa. Baristanya ramah dan pelayanannya
+                maksimal, tidak sungkan bertanyaa keinginan pengunjung."</p>
+        </div>
+        <div class="testimoni">
+            <img src="images/customer/customer2.jpg" alt="">
+            <div class="profile">
+                <h3>Rena Oktavina</h3>
+                <p>Karyawan Swasta</p>
             </div>
-            <div class="team">
-                <img src="images/team/team3.jpg" alt="">
-                <h3>Anfelina Felly</h3>
-                <p>Barista</p>
+            <p>"Asik untuk santai sama temen2, tempatnya nyaman dan bikin seru, banyak game2nya yg asik dimainkan
+                bareng
+                tmn2 atau sadara, menunya enak2, pokoknya recommended banget deh. Tempatnya wajib dicoba banget
+                guys!!!
+                Pelayanannya ramah banget &#129303."</p>
+        </div>
+        <div class="testimoni">
+            <img src="images/customer/customer1.jpg" alt="">
+            <div class="profile">
+                <h3>Bagas Renaldo</h3>
+                <p>Dosen</p>
             </div>
-            <div class="team">
-                <img src="images/team/team4.jpg" alt="">
-                <h3>Sarah Chou</h3>
-                <p>Barista</p>
-            </div>
-        </section>
-        <section class="review" id="review">
-            <h2>Apa Kata Mereka</h2>
-            <p>Kami berikan fakta dan data, karena kepuasan konsumen selalu nomor 1 untuk kami</p>
-            <div class="testimoni">
-                <img src="images/customer/customer1.jpg" alt="">
-                <div class="profile">
-                    <h3>Benni Oktavian</h3>
-                    <p>Mahasiswa</p>
-                </div>
-                <p>"Perdana kesini langsung merasa cocok dari segi tempat dan rasa. Baristanya ramah dan pelayanannya
-                    maksimal, tidak sungkan bertanyaa keinginan pengunjung."</p>
-            </div>
-            <div class="testimoni">
-                <img src="images/customer/customer2.jpg" alt="">
-                <div class="profile">
-                    <h3>Rena Oktavina</h3>
-                    <p>Karyawan Swasta</p>
-                </div>
-                <p>"Asik untuk santai sama temen2, tempatnya nyaman dan bikin seru, banyak game2nya yg asik dimainkan
-                    bareng
-                    tmn2 atau sadara, menunya enak2, pokoknya recommended banget deh. Tempatnya wajib dicoba banget
-                    guys!!!
-                    Pelayanannya ramah banget &#129303."</p>
-            </div>
-            <div class="testimoni">
-                <img src="images/customer/customer1.jpg" alt="">
-                <div class="profile">
-                    <h3>Bagas Renaldo</h3>
-                    <p>Dosen</p>
-                </div>
-                <p>"Tempatnya nyaman sekali, pasti kalo kalian dateng betah.. selain tempatnya yang nyamanlalu
-                    pelayananya
-                    good banget.. dn kalianyang dateng ke kopi kuy jangan lewatkan permainan yang disediakan oleh kopi
-                    kuy.
-                    banyak banget gamenya!."</p>
-            </div>
-        </section>
-        <section class="contact-us" id="contac-us">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7932.741866032694!2d106.668581!3d-6.214715!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f9912c7f297b%3A0xe5a3a671dae861ab!2sKopi%20kuy!5e0!3m2!1sid!2sid!4v1680617229460!5m2!1sid!2sid"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <div class="kontak">
-                <img src="images/icon/icon_phone.png" alt="">
-                <p>+62 (812) 9046 5034</p>
-            </div>
-            <div class="kontak">
-                <img src="images/icon/icon_mail.png" alt="">
-                <p>hello@kopikuy.com</p>
-            </div>
-            <div class="kontak">
-                <img src="images/icon/icon_instagram.png" alt="">
-                <p>@kopi.kuy</p>
-            </div>
-        </section>
-
-        <footer>
-            <div class="navigasi">
-                <a href="#best-seller">Best Seller</a>
-                <a href="#our-team">Our Team</a>
-                <a href="#review">Review</a>
-                <a href="#contact-us">Contact Us</a>
-            </div>
-            <p>Copyright kopi kuy: © 2024 Kopi Kuy. All Rights Reserved</p>
-        </footer>
+            <p>"Tempatnya nyaman sekali, pasti kalo kalian dateng betah.. selain tempatnya yang nyamanlalu
+                pelayananya
+                good banget.. dn kalianyang dateng ke kopi kuy jangan lewatkan permainan yang disediakan oleh kopi
+                kuy.
+                banyak banget gamenya!."</p>
+        </div>
+    </section>
+    <section class="contact-us" id="contact-us">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7932.741866032694!2d106.668581!3d-6.214715!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f9912c7f297b%3A0xe5a3a671dae861ab!2sKopi%20kuy!5e0!3m2!1sid!2sid!4v1680617229460!5m2!1sid!2sid"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <div class="kontak">
+            <img src="images/icon/icon_phone.png" alt="">
+            <p>+62 (812) 9046 5034</p>
+        </div>
+        <div class="kontak">
+            <img src="images/icon/icon_mail.png" alt="">
+            <p>hello@kopikuy.com</p>
+        </div>
+        <div class="kontak">
+            <img src="images/icon/icon_instagram.png" alt="">
+            <p>@kopi.kuy</p>
+        </div>
+    </section>
+    <footer>
+        <div class="navigasi">
+            <a href="#best-seller">Best Seller</a>
+            <a href="#our-team">Our Team</a>
+            <a href="#review">Review</a>
+            <a href="#contact-us">Contact Us</a>
+        </div>
+        <p>Copyright kopi kuy: © 2024 Kopi Kuy. All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
